# latentgee

./: .RData  .Rhistory  .gitignore  README.md  __init__.py  core.py  editable install.ipynb  pyproject.toml  setup.py
archive/: LatentGEE Data.ipynb  environment.yml
examples/: .gitignore  Untitled-1.ipynb  Untitled-2.ipynb  baseline_combat.ipynb  baseline_conqur.R  baseline_conqur.ipynb  baseline_mmuphine.ipynb  config.yaml  confounding-free subset experiments(df5,6,9,10).ipynb  df1_trial_investigation.ipynb  df3_trial_investigation.ipynb  df4_trial_investigation.ipynb  df5_trial_investigation.ipynb  functions.py  prototype copy.ipynb  prototype copy.py  prototype.ipynb  prototype.py  prototype_updated.py  prototype_updated_phase2.py
examples/code/: Untitled-2.ipynb  Untitled-3.ipynb  latentgee_prototype.py  prototype.py
examples/data/: X_df3.csv  X_df3_corrected_MMUPHin.csv  X_df3_filtered_cutoff0.005.csv  X_df4.csv  X_df4_corrected_ConQuR.csv  X_df4_filtered_cutoff0.005.csv  X_df4_filtered_cutoff0.1.csv  X_df5_corrected_ConQuR.csv  X_df5_filtered_cutoff0.05.csv  X_df5_filtered_cutoff0.1.csv  X_df6_corrected_MMUPHin.csv  X_df6_filtered_cutoff0.1.csv  batch_df1_filtered_cutoff0.01.csv  batch_df4_filtered_cutoff0.1.csv  batch_df5_filtered_cutoff0.05.csv  meta_df1.csv  meta_df4.csv  meta_df5_filtered_cutoff0.1.csv
examples/logs/: best_params_latest_trial1107_pid4137367_cutoff_[0.005, 0.01, 0.03, 0.05, 0.07, 0.1]_2026-03-31.json  (+6 more)
experiments/: config.yaml
models/: LatentGEE.py  LatentGEE_OOP.ipynb  LatentGEE_OOP.py  LatentGEE_OOP_260311.py
src/latentgee/: api.py  (+4 more)
(+243 files in other folders)
