[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "latentgee"
version = "0.1.0"
description = "LatentGEE: latent space batch correction with GEE"
authors = [{name = "Seungrin Yang"}]
requires-python = ">=3.8"
dependencies = [
    "numpy",
    "torch",
    "optuna",
    "scikit-learn",
    "hdbscan",
]

[tool.setuptools.packages.find]
where = ["src"]